--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ window.app = {
                                         <div class="e-content">
                                             <div class="c-cmr-img text-center custom-add-mar">
                                                 <figure class="js-lightgallery ">
-                                                    <img src="/للابتكار في الطب_files/student123.jpeg" class="img img-responsive" style="width: 650px;">
+                                                    <img src="للابتكار في الطب_files/student123.jpeg" class="img img-responsive" style="width: 650px;">
 
 
                                                      <!-- <img src="images/student33.jpg" class="img img-responsive" style="width: 650px;"> -->
